--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "googletest"]
 	path = googletest
-	url = git@github.com:google/googletest.git
+	url = http://github.com/google/googletest.git
